--- a/app/views/items/show_user_item.html.haml
+++ b/app/views/items/show_user_item.html.haml
@@ -3,98 +3,7 @@
 
   .item-edit-content
     .item-edit-content__inner
-      %section.item-details
-        %h1.item-details__name 
-          = "#{@item.name}"
-        .item-details__main
-          .item-details__photo
-            .item-details__photo__main
-              .item-details__photo__main__outer
-                .item-details__photo__main__outer__stage{style: "left: 0px; width: 1500px;"}
-                  .item-details__photo__main__outer__stage__item{style: "width: 300px;"}
-                    .item-details__photo__main__outer__stage__item__inner
-                      = image_tag @item.images.first , class: 'item-details-outer-image', style:"opacity: 1;"
-              .item-details__photo__main__dots
-                .item-details__photo__main__dots__dot
-                  %span
-                  .item-details__photo__main__dots__dot__inner
-                    =image_tag = image_tag @item.images.last ,class: 'item-details-dot-image'
-                .item-details__photo__main__dots__dot
-                  %span
-                  .item-details__photo__main__dots__dot__inner
-                    =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-                .item-details__photo__main__dots__dot
-                  %span
-                  .item-details__photo__main__dots__dot__inner
-                    =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-                .item-details__photo__main__dots__dot
-                  %span
-                  .item-details__photo__main__dots__dot__inner
-                    =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-                .item-details__photo__main__dots__dot
-                  %span
-                  .item-details__photo__main__dots__dot__inner
-                    =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-
-          %table.item-details__main__table
-            %tbody
-              %tr
-                %th 出品者
-                %td
-                  =link_to @item.seller_name
-                  %div
-                    .item-details__main__table__ratings
-                      %i.fas.fa-laugh
-                      %span 100
-                    .item-details__main__table__ratings
-                      %i.fas.fa-meh
-                      %span 10
-                    .item-details__main__table__ratings
-                      %i.fas.fa-frown-open
-                      %span 0
-              %tr
-                %th カテゴリー
-                %td
-                  =link_to "https://www.mercari.com/jp/category/1/" do
-                    %div category-name1
-                  =link_to "https://www.mercari.com/jp/category/15/" do
-                    %div.item-details__main__table__category__sub
-                      %i.fas.fa-angle-right category-name2
-                  =link_to "https://www.mercari.com/jp/category/173/" do
-                    %div.item-details__main__table__category__sub__sub
-                      %i.fas.fa-angle-right category-name3
-              %tr
-                %th ブランド
-                %td brand-id-name
-              %tr
-                %th 商品のサイズ
-                %td
-              %tr
-                %th 商品の状態
-                %td item-status
-              %tr
-                %th 配送料の負担
-                %td delivary-price
-              %tr
-                %th 配送の方法
-                %td
-              %tr
-                %th 配送元地域
-                %td
-                  =link_to "delivary-area", "/"
-              %tr
-                %th 発送日の目安
-                %td derivary-day
-
-        .item-details__price-box
-          %span.item-details__price-box__price
-            = "#{@item.price}"
-          %span.item-details__price-box__tax (税込)
-          %span.item-details__price-box__fee 送料込み
-    
-        .item-details__description
-          %p.item-details__description__inner
-            = "#{@item.text}"
+      =render 'item_details'
 
       .edit-buttons
         =link_to "商品の編集", edit_item_path(@item), class: "edit-buttons__sd", id: "edit-buttons__edit"
