--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -42,7 +42,7 @@
       .footer__cells__full-width__inner-cell
         %ul.footer__cells__full-width__inner-cell__lists
           %li.footer__cells__full-width__inner-cell__lists__list
-            = link_to"プライバシーポリシー","/" 
+            = link_to"プライバシーポリシー", plivacy_policy_users_path
           %li.footer__cells__full-width__inner-cell__lists__list
             = link_to"メルカリ利用規約","/" 
           %li.footer__cells__full-width__inner-cell__lists__list
