リンク先とコンフリクトによる修正

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -390,7 +390,7 @@
       width:233px;
       margin: 0 auto;
       overflow:auto;
-      float: right; 
+      float: left; 
       &__box{
         background-color:white;
         width: 220px;
