--- a/app/views/items/show_user_item.html.haml
+++ b/app/views/items/show_user_item.html.haml
@@ -14,6 +14,7 @@
         キャンセル
       = link_to '削除する',"#{@item.id}",class: "delete-contnet__box__delete",method: :delete
   =render 'layouts/header'
+  =render 'items/item_details'
   .item-edit-content
     .item-edit-content__inner
       .edit-buttons
