--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -43,6 +43,6 @@
         - else
           .header__inner__main__btn
             .header__inner__main__btn__signup
-              =link_to '新規会員登録','users/signup_page',class: 'btn_red'
+              =link_to '新規会員登録',signup_page_users_path,class: 'btn_red'
             .header__inner__main__btn__login
-              =link_to 'ログイン',"users/sign_in",class: 'btn_blue'
+              =link_to 'ログイン',new_user_session_path,class: 'btn_blue'
