--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -49,6 +49,7 @@ padding-top:8px;
         position: absolute;
         right:13px;
         top:11px;
+        color:#ea352d; 
       }
     }
   }
