--- a/app/views/items/_product_information.html.haml
+++ b/app/views/items/_product_information.html.haml
@@ -51,7 +51,12 @@
                 .select-wrap
                   %i.fa.fa-angle-down
                   .serlect-default
-                    = form.select :category_id, [['---', ""],['レディース', 1],['メンズ', 2],['ベビー・キッズ', 3]],{class: ""},{selected: "#{@item.category_id}"}
+                    %select{:name => "blood"}
+                      %option{:value => ""} ---
+                      %option{:value => ""} レディース
+                      %option{:value => ""} メンズ
+                      %option{:value => ""} ベビー・キッズ
+                    //= form.select :category_id, [['---', ""],['レディース', 1],['メンズ', 2],['ベビー・キッズ', 3]],{class: ""},{selected: "#{@item.category_id}"}
                 -# .select-wrap
                 -#   %i.fa.fa-angle-down
                 -#   .serlect-default
