--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -93,6 +93,6 @@
         電話番号の確認
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"signout" do 
+      = link_to signout_users_path do 
         ログアウト
         %i.fa.fa-chevron-right
