--- a/app/views/layouts/_post-btn.html.haml
+++ b/app/views/layouts/_post-btn.html.haml
@@ -1,5 +1,5 @@
 - if user_signed_in? 
-  = link_to 'items/new',class:'post_box' do
+  = link_to new_item_path,class:'post_box' do
     .post_text
     出品
     %br/
