--- a/app/views/items/_picup_content.html.haml
+++ b/app/views/items/_picup_content.html.haml
@@ -3,7 +3,7 @@
     .pickup__box
       = link_to item_path(item) do
         .pickup__photo
-          = image_tag (item.images.first), class: "img-width"
+          = image_tag url_for(item.images.first), class: "img-width"
         .pickup__body
           %h3.items-name 
             = item.name
