--- a/app/assets/stylesheets/_single.scss
+++ b/app/assets/stylesheets/_single.scss
@@ -31,6 +31,7 @@
       .sell {
       &__form {
         border-top: 1px solid #eee;
+        overflow: hidden;
         &__box {
           padding: 40px;
           overflow: auto;
@@ -42,13 +43,14 @@
             display:inline-block;
             height:160px;
             float: left;
+            position: relative;
             &__ul{
               display:inline-block;
-              height:100%;
+              // height:100%;
               overflow: auto;
               margin-bottom: 16px;
               &__li{
-                height:100%;
+                height:160px;
                 background-color: black;
                 float: left;
                 margin: 0 0 0 10px;
@@ -165,7 +167,7 @@
       }
       &__price__form{
         line-height: 48px;
-        padding: 0 0 40px;
+        padding: 0 0 20px;
       }
       &__price__form__right{
         line-height: 48px;
@@ -408,4 +410,20 @@
 #file_photo_field{
   width:620px;
   box-sizing: border-box;
+}
+
+.error-message-box{
+  font-size:16px;
+  color:red;
+  font-weight: bold;
+  margin-top:10px;
+}
+
+.error-message-box-first{
+  font-size:16px;
+  color:red;
+  font-weight: bold;
+  position: relative;
+  top:10px;
+  display: inline-block;
 }
