--- a/app/views/items/_product_information.html.haml
+++ b/app/views/items/_product_information.html.haml
@@ -77,7 +77,7 @@
             .sell__group__box__sutetas
               %label
                 商品のサイズ
-                %span.form-require 必須
+                %span.form-any 任意
               .select-wrap
                 .serlect-default
                   %i.fa.fa-angle-down
@@ -117,7 +117,10 @@
                 .select-wrap
                   .serlect-default
                     %i.fa.fa-angle-down
-                    = delivary.select :delivary_method, [['---', "---"], ['らくらくメルカリ便','らくらくメルカリ便'],['ゆうメール','ゆうメール'],['レターパック','レターパック'],['クロネコヤマト','クロネコヤマト'],['普通郵便','普通郵便']],{selected: @delivary.delivary_method}
+                    = delivary.select :delivary_method, [['---', ""], ['らくらくメルカリ便','らくらくメルカリ便'],['ゆうメール','ゆうメール'],['レターパック','レターパック'],['クロネコヤマト','クロネコヤマト'],['普通郵便','普通郵便']],{selected: @delivary.delivary_method}
+                  - if @delivary.errors.messages[:delivary_method].any?
+                    .error-message-box
+                      = @delivary.errors.messages[:delivary_method]
               .sell__group__box__sutetas
                 %label
                   発送元の地域
@@ -199,4 +202,5 @@
         = image_tag src='//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?3791839826', alt: 'mercari', height: '65', width: '80', class: 'fotter-logo'
     %p
       %small © 2019 Mercari
+
 
