--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -7,21 +7,24 @@
     .main__buy-content
       .main__buy-content__inner
         %h3.main__buy-content__inner__buy-item-image
-          = image_tag "https://kohacu.com/wp-content/uploads/2018/04/kohacu.com_001111_20180428-300x300.png"
-        %p.main__buy-content__inner__buy-item-name.bold ワンピース
-        %form.main__buy-content__inner__buy-form{:action => "https://www.mercari.com/jp/transaction/buy/done/m74012491239/", :method => "POST", :novalidate => "novalidate"}
-          %p.main__buy-content__inner__buy-form__buy-price.bold
-            ¥ 1,200
-            %span.main__buy-content__inner__buy-form__buy-price__item-shipping-fee 送料込み
-          %ul.main__buy-content__inner__buy-form__point
-            %li.main__buy-content__inner__buy-form__point__accordion-parent
-              .main__buy-content__inner__buy-form__point__accordion-parent__accordion-toggle
-                ポイントはありません
-          %ul.main__buy-content__inner__buy-form__buy-price-table
-            %li.main__buy-content__inner__buy-form__buy-price-table__buy-price-row.bold
-              .main__buy-content__inner__buy-form__buy-price-table__buy-price-row__left-cell 支払い金額
-              .main__buy-content__inner__buy-form__buy-price-table__buy-price-row__right-cell ¥ 1,200
-          %button.main__buy-content__inner__buy-form__btn{:type => "submit"} 購入する
+          = image_tag (@item.images.first)
+        %p.main__buy-content__inner__buy-item-name.bold
+          = "#{@item.name}"
+        .main__buy-content__inner__buy-form
+          = form_with url: pay_card_path do |f|
+            %p.main__buy-content__inner__buy-form__buy-price.bold
+              = "¥ #{@item.price}"
+              %span.main__buy-content__inner__buy-form__buy-price__item-shipping-fee 送料込み
+            %ul.main__buy-content__inner__buy-form__point
+              %li.main__buy-content__inner__buy-form__point__accordion-parent
+                .main__buy-content__inner__buy-form__point__accordion-parent__accordion-toggle
+                  ポイントはありません
+            %ul.main__buy-content__inner__buy-form__buy-price-table
+              %li.main__buy-content__inner__buy-form__buy-price-table__buy-price-row.bold
+                .main__buy-content__inner__buy-form__buy-price-table__buy-price-row__left-cell 支払い金額
+                .main__buy-content__inner__buy-form__buy-price-table__buy-price-row__right-cell
+                  = "¥ #{@item.price}"
+            = f.submit "購入する", class: "main__buy-content__inner__buy-form__btn"
       .main__buy-content__buy-content
         .main__buy-content__buy-content__user-inner
           %h3 配送先
